<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup">

    <ImageView
        android:id="@+id/applogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/applogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"/>

    <EditText
        android:id="@+id/edt_firstname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/applogo"
        android:layout_marginTop="10dp"
        android:hint="@string/edt_firstname"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edt_background"
        android:paddingLeft="20dp"/>

    <EditText
        android:id="@+id/edt_lastname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/edt_firstname"
        android:layout_marginTop="10dp"
        android:hint="@string/edt_lastname"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edt_background"
        android:paddingLeft="20dp"/>

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/edt_lastname"
        android:layout_marginTop="10dp"
        android:hint="@string/edt_email"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edt_background"
        android:paddingLeft="20dp"/>

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/edt_email"
        android:layout_marginTop="10dp"
        android:hint="@string/edt_password"
        android:layout_marginLeft="20dp"
        android:background="@drawable/edt_background"
        android:paddingLeft="20dp"
        android:layout_marginRight="20dp"/>

    <Button
        android:id="@+id/bthSignup"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_password"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_signup"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:background="@drawable/btn_background"
        android:layout_marginTop="10dp"/>


</RelativeLayout>